Added basic game loop

--- a/RpgGame/RpgGame.vcxproj
+++ b/RpgGame/RpgGame.vcxproj
@@ -136,6 +136,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\Game.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
