--- a/RpgGame/RpgGame.vcxproj
+++ b/RpgGame/RpgGame.vcxproj
@@ -137,9 +137,16 @@
   <ItemGroup>
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\Game.cpp" />
+    <ClCompile Include="Src\Map.cpp" />
+    <ClCompile Include="Src\System\EntityComponent.cpp" />
+    <ClCompile Include="Src\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h" />
+    <ClInclude Include="Src\Map.h" />
+    <ClInclude Include="Src\System\Animation.h" />
+    <ClInclude Include="Src\System\EntityComponent.h" />
+    <ClInclude Include="Src\TextureManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
