--- a/RpgGame/RpgGame.vcxproj
+++ b/RpgGame/RpgGame.vcxproj
@@ -76,12 +76,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\dev\Repos\RpgGame\RpgGame\Dependency\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)RpgGame\Dependency\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>C:\dev\Repos\RpgGame\RpgGame\Dependency\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)RpgGame\Dependency\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -95,7 +95,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)RpgGame\Dependency\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,18 +135,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\AssetManager.cpp" />
+    <ClCompile Include="Src\Collision.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Map.cpp" />
+    <ClCompile Include="Src\System\Animation.cpp" />
     <ClCompile Include="Src\System\EntityComponent.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
+    <ClCompile Include="Src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\AssetManager.h" />
+    <ClInclude Include="Src\Collision.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\Map.h" />
     <ClInclude Include="Src\System\Animation.h" />
+    <ClInclude Include="Src\System\ColliderComponent.h" />
+    <ClInclude Include="Src\System\Components.h" />
     <ClInclude Include="Src\System\EntityComponent.h" />
+    <ClInclude Include="Src\System\KeyboardController.h" />
+    <ClInclude Include="Src\System\ProjectileComponent.h" />
+    <ClInclude Include="Src\System\SpriteComponent.h" />
+    <ClInclude Include="Src\System\TileComponent.h" />
+    <ClInclude Include="Src\System\TransformComponent.h" />
+    <ClInclude Include="Src\System\UILabel.h" />
     <ClInclude Include="Src\TextureManager.h" />
+    <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
